--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -1,26 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-      <LangVersion>7.1</LangVersion>
-    </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="xunit" Version="2.3.0-rc1-build3809" />
-        <PackageReference Include="xunit.runner.console" Version="2.3.0-rc1-build3809" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-rc1-build3809" />
-        <!--<DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta4-build3742" />-->
-    </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\PasPasPas.Api\PasPasPas.Api.csproj" />
-      <ProjectReference Include="..\PasPasPas.DesktopPlatform\PasPasPas.DesktopPlatform.csproj" />
-      <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
-      <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
-      <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <!-- fix error MSB3277 -->
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.0.3" />
+    <PackageReference Include="xunit" Version="2.3.0-rc2-build3812" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-rc2-build3812" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PasPasPas.Api\PasPasPas.Api.csproj" />
+    <ProjectReference Include="..\PasPasPas.DesktopPlatform\PasPasPas.DesktopPlatform.csproj" />
+    <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
+    <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
+    <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
