--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,37 @@ indent_size  = 4
 indent_style = space
 
 [*.cs]
-dotnet_style_qualification_for_field                               = false : none
-dotnet_style_qualification_for_method                              = false : none
-dotnet_style_qualification_for_property                            = false : none
-dotnet_style_qualification_for_event                               = false : none
+dotnet_style_qualification_for_field                               = false : suggestion
+dotnet_style_qualification_for_method                              = false : suggestion
+dotnet_style_qualification_for_property                            = false : suggestion
+dotnet_style_qualification_for_event                               = false : suggestion
+dotnet_style_predefined_type_for_locals_parameters_members         = true : suggestion
+dotnet_style_predefined_type_for_member_access                     = true : suggestion
+dotnet_style_require_accessibility_modifiers                       = true : suggestion
+dotnet_style_object_initializer                                    = true : suggestion
+dotnet_style_collection_initializer	                               = true : suggestion
+dotnet_style_explicit_tuple_names	                               = true : suggestion
+dotnet_style_coalesce_expression	                               = true : suggestion
+dotnet_style_null_propagation                                      = true : suggestion
+dotnet_sort_system_directives_first                                = true
+csharp_style_var_for_built_in_types	                               = true : suggestion
+csharp_style_var_when_type_is_apparent                             = true : suggestion
+csharp_style_var_elsewhere                                         = true : suggestion
+csharp_style_expression_bodied_methods		                       = when_possible : suggestion
+csharp_style_expression_bodied_constructors	                       = when_possible : suggestion
+csharp_style_expression_bodied_operators	                       = when_possible : suggestion
+csharp_style_expression_bodied_properties	                       = when_possible : suggestion
+csharp_style_expression_bodied_indexers		                       = when_possible : suggestion
+csharp_style_expression_bodied_accessors	                       = when_possible : suggestion
+csharp_style_pattern_matching_over_is_with_cast_check              = true : suggestion
+csharp_style_pattern_matching_over_as_with_null_check              = true : suggestion
+csharp_style_inlined_variable_declaration                          = true : suggestion
+csharp_prefer_simple_default_expression                            = true : suggestion
+csharp_style_deconstructed_variable_declaration                    = true : suggestion
+csharp_style_pattern_local_over_anonymous_function                 = true : suggestion
+csharp_style_throw_expression                                      = true : suggestion
+csharp_style_conditional_delegate_call                             = true : suggestion
+csharp_preferred_modifier_order                                    = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
 csharp_indent_case_contents                                        = true
 csharp_indent_switch_labels                                        = true
 csharp_indent_labels                                               = one_less_than_current
@@ -20,7 +47,6 @@ csharp_space_between_method_call_parameter_list_parentheses        = false
 csharp_preserve_single_line_statements                             = false
 csharp_preserve_single_line_blocks                                 = true
 csharp_prefer_braces                                               = false : suggestion
-dotnet_sort_system_directives_first                                = true
 csharp_new_line_before_open_brace                                  = none
 csharp_new_line_before_else                                        = true
 csharp_new_line_before_catch                                       = true
