--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -3,37 +3,35 @@
     <Import Project="../Common.targets" />
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <TargetFramework>$(PasPasPasTargetFramework)</TargetFramework>
+        <Description>Unit tests for the pas³ project.</Description>
+        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionSuffix>0</VersionSuffix>
+        <Company>$(PasPasPasCompany)</Company>
+        <Copyright>$(PasPasPasCopyright)</Copyright>
+        <Product>PasPasPasTests</Product>
+        <CodeAnalysisRuleSet>../PasPasPas.Testing.Ruleset</CodeAnalysisRuleSet>
         <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
+        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="System.Buffers" Version="4.5.0" />
         <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.console" Version="2.4.1">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 
