--- a/PasPasPas.Global/PasPasPas.Globals.csproj
+++ b/PasPasPas.Global/PasPasPas.Globals.csproj
@@ -34,6 +34,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     </ItemGroup>
 
 </Project>
