--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -37,4 +37,8 @@
         <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Globals.csproj" />
+    </ItemGroup>
+
 </Project>
