--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ script:
  - cd PasPasPasTests
  - dotnet restore
  - dotnet build -c Release
- - dotnet test -c Release --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+ - dotnet test -c Release --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[xunit*]*"
 after_script:
  - bash <(curl -s https://codecov.io/bash)
