--- a/P3SyntaxTreeViewer/packages.config
+++ b/P3SyntaxTreeViewer/packages.config
@@ -2,19 +2,20 @@
 <packages>
   <package id="ErrorProne.NET" version="0.1.5898.41180" targetFramework="net471" />
   <package id="ErrorProne.NET.Structs" version="0.1.2" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
-  <package id="Microsoft.NetCore.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
-  <package id="Microsoft.NetFramework.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
-  <package id="SharpFloatLibrary" version="1.0.3" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.2" targetFramework="net472" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.2" targetFramework="net472" developmentDependency="true" />
+  <package id="SharpFloatLibrary" version="1.0.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="Text.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
