--- a/SampleRunner/SampleRunner.csproj
+++ b/SampleRunner/SampleRunner.csproj
@@ -6,6 +6,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
+        <CodeAnalysisRuleSet>../PasPasPas.Testing.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -18,8 +19,7 @@
 
     <ItemGroup>
         <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
             <PrivateAssets>all</PrivateAssets>
@@ -41,8 +41,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Lokad.ILPack">
-        <HintPath>..\PasPasPas.AssemblyBuilder\lib\Lokad.ILPack.dll</HintPath>
-      </Reference>
+        <Reference Include="Lokad.ILPack">
+            <HintPath>..\PasPasPas.AssemblyBuilder\lib\Lokad.ILPack.dll</HintPath>
+        </Reference>
     </ItemGroup>
 </Project>
