--- a/PasPasPas.AssemblyBuilder/PasPasPas.AssemblyBuilder.csproj
+++ b/PasPasPas.AssemblyBuilder/PasPasPas.AssemblyBuilder.csproj
@@ -38,6 +38,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
+        <ProjectReference Include="..\PasPasPas.Typings\PasPasPas.Typings.csproj" />
     </ItemGroup>
 
 </Project>
