--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,7 @@ dotnet_style_qualification_for_event                               = false : sug
 dotnet_style_predefined_type_for_locals_parameters_members         = true : suggestion
 dotnet_style_predefined_type_for_member_access                     = true : suggestion
 dotnet_style_require_accessibility_modifiers                       = true : suggestion
+dotnet_style_readonly_field                                        = true : suggestion
 dotnet_style_object_initializer                                    = true : suggestion
 dotnet_style_collection_initializer	                               = true : suggestion
 dotnet_style_explicit_tuple_names	                               = true : suggestion
@@ -59,3 +60,4 @@ dotnet_style_parentheses_in_other_binary_operators                 = never_if_un
 dotnet_style_parentheses_in_other_operators                        = never_if_unnecessary : suggestion
 dotnet_style_prefer_conditional_expression_over_assignment         = false: suggestion
 dotnet_style_prefer_conditional_expression_over_return             = false : suggestion
+csharp_prefer_switch_expression                                    = true : suggestion
