--- a/PasPasPas.Desktop/PasPasPas.Desktop.csproj
+++ b/PasPasPas.Desktop/PasPasPas.Desktop.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackwardCompatibility\EncodingHelper.cs" />
+    <Compile Include="BackwardCompatibility\StreamHelper.cs" />
+    <Compile Include="BackwardCompatibility\StringHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\PasPasPas.Api\src\**\*.cs" Exclude="..\PasPasPas.Api\src\AssemblyInfo.cs">
       <Link>%(RecursiveDir)%(FileName)</Link>
