--- a/Common.targets
+++ b/Common.targets
@@ -11,6 +11,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+
+        <PackageReference Include="SharpFloatLibrary" Version="1.0.4" />
+        <PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+
         <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
