--- a/.editorconfig
+++ b/.editorconfig
@@ -61,3 +61,5 @@ dotnet_style_parentheses_in_other_operators                        = never_if_un
 dotnet_style_prefer_conditional_expression_over_assignment         = false: suggestion
 dotnet_style_prefer_conditional_expression_over_return             = false : suggestion
 csharp_prefer_switch_expression                                    = true : suggestion
+csharp_wrap_before_arrow_with_expressions                          = true
+csharp_place_expr_accessor_on_single_line                          = false
