--- a/PasPasPas.Typings/PasPasPas.Typings.csproj
+++ b/PasPasPas.Typings/PasPasPas.Typings.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="src\Common\TypeAnnotator_Expressions.cs~RF1a2788c3.TMP" />
       <None Remove="src\Simple\BooleanType.cs~RFb6d4cf4.TMP" />
     </ItemGroup>
 
