--- a/Common.targets
+++ b/Common.targets
@@ -15,6 +15,7 @@
 
         <PackageReference Include="SharpFloatLibrary" Version="1.0.4" />
         <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
+        <PackageReference Include="Apex.Analyzers.Immutable.Attributes" Version="1.0.0" />
 
         <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
             <PrivateAssets>all</PrivateAssets>
@@ -31,7 +32,9 @@
         <PackageReference Include="IDisposableAnalyzers" Version="3.4.1">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-
+        <PackageReference Include="Apex.Analyzers.Immutable" Version="1.2.5" >
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
